# workflow-management

./: .env  .env.example  .gitignore  BO_INTEGRATION_SUMMARY.md  Cargo.toml  FRONTEND_INTEGRATION_CONFIRMATION.md  README.md  SDL1_ENHANCEMENT_SUMMARY.md  WORKFLOW_MODULE_SCHEMAS.md  bo_recommendations.duckdb  code-rules.md  create_node.md  datastructure.md  debug_nodes.js  next.md  package-lock.json  package.json  sdl7-uo.md  sdl7.json  setup.py  start-ai-agent.py  test_blox_registration.js  test_checkbox.html  test_uo_fixes.json  tsconfig.json  vercel.json  vite.config.ts
.history/: .gitignore_20250323123623  .gitignore_20250323123737  Cargo_20250402165418.toml  README_20250416124211.md  README_20250416124359.md  amend_20250416150600.md  amend_20250416150606.md  amend_20250416150611.md  amend_20250416153319.md  amend_20250416153323.md  amend_20250416153338.md  amend_20250416153341.md  amend_20250416154843.md  index_20250318133404.html  index_20250329144432.html  index_20250513090915.html  package_20250416124212.json  package_20250416145605.json  package_20250416145854.json  package_20250416145900.json  package_20250416145903.json  tsconfig_20241211162744.json  tsconfig_20250310153721.json  tsconfig_20250401120733.json  tsconfig_20250401120930.json  tsconfig_20250416144117.json  tsconfig_20250416152734.json  vite.config_20250318152721.ts  vite.config_20250403143312.ts  vite.config_20250403163054.ts  vite.config_20250403164743.ts
backend/device_executor/: Cargo.toml
backend/device_executor/src/: events.rs  lib.rs  manager.rs
config/: pytest.ini  setup.py
deployment/: README.md
(+1302 files in other folders)
