[package]
name = "device_executor"
version = "0.1.0"
edition = "2021"
description = "Device executor implementation for SDL devices"

[[example]]
name = "cva_test_client"
path = "examples/cva_test_client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
pyo3 = { version = "0.19", features = ["extension-module"] } 
