[package]
name = "device_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
pyo3 = { version = "0.19", features = ["extension-module"] }
futures = "0.3"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[[example]]
name = "test_cva"
path = "examples/test_cva.rs" 
